style(search-widget): fix overlapping elements on search input, input and button now wrap smallest breakpoint

--- a/src/common/style.scss
+++ b/src/common/style.scss
@@ -36,7 +36,7 @@ select.form-select {
 
 // Update UTKWDS theme file to this padding
 .button-submit {
-    margin-left: 10px;
+    height: 58px;
     padding: 0 20px !important;
     word-break: normal;
     
